# megacity

./: .gitignore  .pr_body.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PERFORMANCE.md  README.md  fix_conflict.py
crates/app/: Cargo.toml  index.html
crates/app/assets/replays/: index.json  nemotron-3-nano-30b-a3b_free_42_1772284935.web_x15.replay  nemotron-3-nano-30b-a3b_free_42_1772285791.web_x26.replay  nemotron-3-nano-30b-a3b_free_42_1772286545.web_x42.replay
crates/app/benches/: frame_perf.rs
crates/app/src/: agent_mode.rs  main.rs  record_replay.rs  web_replay.rs
crates/save/: Cargo.toml
crates/save/benches/: save_bench.rs  save_snapshot_bench.rs
crates/save/src/: atomic_write.rs  autosave_bridge.rs  crash_recovery.rs  despawn.rs  exclusive_load.rs  exclusive_new_game.rs  exclusive_save.rs  file_header.rs  file_header_tests.rs  lib.rs  reset_resources.rs  restore_resources.rs  save_codec.rs  save_error.rs  save_fuzz_mutation_tests.rs  save_fuzz_tests.rs  save_helpers.rs  save_metadata.rs  save_migrate.rs  save_migrate_registry.rs  save_plugin.rs  save_restore.rs  save_stages.rs  save_types.rs  saveable_ext.rs  serialization.rs  spawn_entities.rs  wasm_idb.rs
crates/save/src/save_codec/: grid_codecs.rs  infrastructure_codecs.rs  mod.rs  service_codecs.rs  weather_codecs.rs
crates/save/src/save_restore/: economy.rs  infrastructure.rs  mod.rs  waste.rs  water.rs  weather.rs
crates/save/src/save_stages/: assemble.rs  disaster_stage.rs  economy_stage.rs  entity_stage.rs  environment_stage.rs  grid_stage.rs  mod.rs  policy_stage.rs
crates/save/src/save_types/: core_types.rs  infrastructure_types.rs  mod.rs  policy_types.rs  save_data.rs  version.rs
crates/save/src/serialization/: mod.rs  tests_basic_roundtrip.rs  tests_citizen.rs  tests_compat_v2.rs  tests_extensions_vacancy.rs  tests_family.rs  tests_life_sim.rs  tests_lz4_compression.rs  tests_migration.rs  tests_migration_chain.rs  tests_save_error.rs  tests_save_metadata.rs  tests_savings.rs  tests_stormwater_climate.rs  tests_water.rs
crates/simulation/: Cargo.toml
crates/simulation/benches/: city_perf.rs  full_tick_bench.rs  grid_bench.rs  pathfinding_bench.rs  traffic_bench.rs
crates/simulation/src/: abandonment.rs  achievements.rs  advisors.rs  agent_protocol.rs  agriculture.rs  airport.rs  airport_pollution.rs  ambient_soundscape.rs  app_state.rs  app_state_plugin.rs  ascii_map.rs  audio_settings.rs  auto_grid_road.rs  autosave.rs  bankruptcy_warning.rs  battery_storage.rs  bicycle_lanes.rs  biomass_power.rs  blackout.rs  blueprints.rs  budget.rs  building_emissions.rs  building_upgrade.rs  buildings.rs  bulldoze_refund.rs  bus_transit.rs  campus_university.rs  chart_data.rs  citizen.rs  citizen_spawner.rs  city_hall.rs  city_observation.rs  climate_change.rs  coal_power.rs  cold_snap.rs  colorblind.rs  combined_heat_power.rs  composting.rs  config.rs  contraction_hierarchy.rs  (+232 more)
crates/simulation/src/achievements/: mod.rs  save.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/advisors/: advice_city.rs  advice_core.rs  mod.rs  types.rs
crates/simulation/src/agriculture/: helpers.rs  mod.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/airport/: mod.rs  stats.rs  systems.rs  tests.rs  tier.rs
crates/simulation/src/blueprints/: blueprint.rs  library.rs  mod.rs  plugin.rs  tests.rs  types.rs
crates/simulation/src/buildings/: construction.rs  mod.rs  plugin.rs  spawning.rs  tests.rs  types.rs
crates/simulation/src/bus_transit/: mod.rs  state.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/climate_change/: calculations.rs  constants.rs  mod.rs  state.rs  systems.rs  tests.rs
crates/simulation/src/cold_snap/: detection.rs  mod.rs  pipe_damage.rs  systems.rs  types.rs
crates/simulation/src/cso/: mod.rs  overflow_tests.rs  systems.rs  types.rs
crates/simulation/src/district_policies/: lookup.rs  mod.rs  systems.rs  tests.rs  tests_lookup.rs  types.rs
crates/simulation/src/education_jobs/: mod.rs  plugin.rs  systems.rs  types.rs
crates/simulation/src/energy_demand/: mod.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/far_transfer/: mod.rs  systems.rs  tests.rs  tests_tdr.rs  types.rs
crates/simulation/src/flood_protection/: mod.rs  systems.rs  tests_systems.rs  tests_types.rs  types.rs
crates/simulation/src/flood_simulation/: damage_curves.rs  mod.rs  resources.rs  system_tests.rs  systems.rs
crates/simulation/src/forest_fire/: constants.rs  helpers.rs  mod.rs  resources.rs  systems.rs  tests.rs
crates/simulation/src/form_transect/: grid.rs  mod.rs  systems.rs  types.rs
crates/simulation/src/freight_traffic/: constants.rs  mod.rs  plugin.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/game_actions/: actions.rs  executor.rs  mod.rs  plugin.rs  queue.rs  result_log.rs  results.rs  tests.rs
crates/simulation/src/garbage/: mod.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/groundwater_depletion/: mod.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/happiness/: constants.rs  coverage.rs  mod.rs  plugin.rs  systems.rs  tests.rs
crates/simulation/src/hazardous_waste/: constants.rs  mod.rs  systems.rs  tests.rs  types.rs
crates/simulation/src/heat_mitigation/: calculations.rs  constants.rs  (+4 more)
crates/simulation/tests/: scale_1m.rs
crates/ui/: Cargo.toml
crates/ui/src/: advisor_tips.rs  aqi_tooltip.rs  auto_grid_ui.rs  box_selection.rs  cell_info_panel.rs  cell_tooltip.rs  citizen_info.rs  confirm_dialog.rs  context_menu.rs  crash_recovery_ui.rs  dashboard_toggles.rs  day_night_panel.rs  district_inspect.rs  dual_overlay.rs  graphs.rs  help_overlay.rs  info_panel.rs  keybindings_panel.rs  lib.rs  loading_screen.rs  localization.rs  main_menu.rs  main_menu_load.rs  milestones.rs  minimap.rs  multi_select.rs  notification_ticker.rs  oneway_ui.rs  overlay_legend.rs  pause_menu.rs  plugin_registration.rs  progressive_disclosure.rs  replay_viewer.rs  road_cost_display.rs  road_segment_info.rs  save_slot_format.rs  save_slot_ui.rs  search.rs  service_coverage_panel.rs  settings_menu.rs  (+10 more)
(+1821 files in other folders)
