[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/simulation",
    "crates/rendering",
    "crates/ui",
    "crates/save",
]

[workspace.dependencies]
bevy = { version = "0.15" }
bevy_egui = "0.33"
fastnoise-lite = "1.1"
pathfinding = "4"
bitcode = "0.6"
serde = { version = "1", features = ["derive"] }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

