[package]
name = "megacity"
version = "0.1.0"
edition = "2021"

[features]
bench = ["simulation/bench"]

[dependencies]
bevy = { workspace = true }
simulation = { path = "../simulation" }
rendering = { path = "../rendering" }
ui = { path = "../ui" }
save = { path = "../save" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "frame_perf"
harness = false
required-features = ["bench"]

# Desktop-only: enable native windowing backends
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["x11", "wayland"] }

# WASM-only: enable WebGL2 renderer and wire up JS entropy sources
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["webgl2"] }
# getrandom 0.2: used by bevy_utils, const-random-macro, rand 0.8
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
# getrandom 0.3: used by ahash (via const-random), jobserver
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
# getrandom 0.4: used by uuid 1.x (Bevy entity/asset IDs)
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[lints]
workspace = true
