[package]
name = "save"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bitcode = { workspace = true }
serde = { workspace = true }
simulation = { path = "../simulation" }
rendering = { path = "../rendering" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
flate2 = "1.1"
