[package]
name = "save"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bitcode = { workspace = true }
serde = { workspace = true }
simulation = { path = "../simulation" }
xxhash-rust = { workspace = true }
lz4_flex = { workspace = true }
rendering = { path = "../rendering" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lz4_flex = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Event",
    "EventTarget",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "DomStringList",
    "DomException",
    "console",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
flate2 = "1.1"

# Desktop-only: winit needs a native windowing backend for benchmarks (TestCity uses a Bevy App)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["x11"] }

[[bench]]
name = "save_bench"
harness = false

[[bench]]
name = "save_snapshot_bench"
harness = false

[lints]
workspace = true
