[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
fastnoise-lite = { workspace = true }
pathfinding = { workspace = true }
bitcode = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
automod_dir = { path = "../automod_dir" }
futures-lite = "2"

[features]
bench = []

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "city_perf"
harness = false
required-features = ["bench"]

# Desktop-only: winit needs a native windowing backend for benchmarks (TestCity uses a Bevy App)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["x11"] }

[lints]
workspace = true
