[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
fastnoise-lite = { workspace = true }
pathfinding = { workspace = true }
bitcode = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
automod_dir = { path = "../automod_dir" }
futures-lite = "2"

[features]
bench = []
trace = []

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "city_perf"
harness = false
required-features = ["bench"]

# Desktop-only: winit needs a native windowing backend for benchmarks (TestCity uses a Bevy App)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, features = ["x11"] }

[lints]
workspace = true

[[bench]]
name = "pathfinding_bench"
harness = false

[[bench]]
name = "grid_bench"
harness = false

[[bench]]
name = "traffic_bench"
harness = false

[[bench]]
name = "full_tick_bench"
harness = false
required-features = ["bench"]
