[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
simulation = { path = "../simulation" }
rendering = { path = "../rendering" }
save = { path = "../save" }
automod_dir = { path = "../automod_dir" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }

[lints]
workspace = true
